apply google checkstyle