@@ -16,54 +16,53 @@
 
 package dynamok.source;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import com.google.common.collect.ImmutableMap;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.kafka.connect.data.Struct;
 import org.junit.jupiter.api.Test;
 import software.amazon.awssdk.core.BytesWrapper;
 import software.amazon.awssdk.core.SdkBytes;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-
 public class RecordMapperTest {
 
     @Test
     public void conversions() {
-        final String string = "test";
-        final String number = "42";
-        final SdkBytes bytes = SdkBytes.fromByteArray(new byte[]{42});
-        final boolean bool = true;
-        final boolean nullValue = true;
-        final List<String> stringList = List.of(string);
-        final List<String> numberList = List.of(number);
-        final List<SdkBytes> byteList = List.of(bytes);
-        final Map<String, Struct> record = RecordMapper.toConnect(
-                ImmutableMap.<String, AttributeValue>builder()
-                        .put("thestring", AttributeValue.fromS(string))
-                        .put("thenumber", AttributeValue.fromN(number))
-                        .put("thebytes", AttributeValue.fromB(bytes))
-                        .put("thestrings", AttributeValue.fromSs(stringList))
-                        .put("thenumbers", AttributeValue.fromNs(numberList))
-                        .put("thebyteslist", AttributeValue.fromBs(byteList))
-                        .put("thenull", AttributeValue.fromNul(true))
-                        .put("thebool", AttributeValue.fromBool(bool))
-                        .build()
-        );
-        assertEquals(string, record.get("thestring").get("S"));
-        assertEquals(number, record.get("thenumber").get("N"));
-        assertEquals(bytes.asByteBuffer(), record.get("thebytes").get("B"));
-        assertEquals(Collections.singletonList(string), record.get("thestrings").get("SS"));
-        assertEquals(Collections.singletonList(number), record.get("thenumbers").get("NS"));
-        assertEquals(Stream.of(bytes).map(BytesWrapper::asByteBuffer).collect(Collectors.toList()), record.get("thebyteslist").get("BS"));
-        assertEquals(nullValue, record.get("thenull").get("NULL"));
-        assertEquals(bool, record.get("thebool").get("BOOL"));
+      final String string = "test";
+      final String number = "42";
+      final SdkBytes bytes = SdkBytes.fromByteArray(new byte[] {42});
+      final boolean bool = true;
+      final boolean nullValue = true;
+      final List<String> stringList = List.of(string);
+      final List<String> numberList = List.of(number);
+      final List<SdkBytes> byteList = List.of(bytes);
+      final Map<String, Struct> record =
+          RecordMapper.toConnect(
+              ImmutableMap.<String, AttributeValue>builder()
+                  .put("thestring", AttributeValue.fromS(string))
+                  .put("thenumber", AttributeValue.fromN(number))
+                  .put("thebytes", AttributeValue.fromB(bytes))
+                  .put("thestrings", AttributeValue.fromSs(stringList))
+                  .put("thenumbers", AttributeValue.fromNs(numberList))
+                  .put("thebyteslist", AttributeValue.fromBs(byteList))
+                  .put("thenull", AttributeValue.fromNul(true))
+                  .put("thebool", AttributeValue.fromBool(bool))
+                  .build());
+      assertEquals(string, record.get("thestring").get("S"));
+      assertEquals(number, record.get("thenumber").get("N"));
+      assertEquals(bytes.asByteBuffer(), record.get("thebytes").get("B"));
+      assertEquals(Collections.singletonList(string), record.get("thestrings").get("SS"));
+      assertEquals(Collections.singletonList(number), record.get("thenumbers").get("NS"));
+      assertEquals(
+          Stream.of(bytes).map(BytesWrapper::asByteBuffer).collect(Collectors.toList()),
+          record.get("thebyteslist").get("BS"));
+      assertEquals(nullValue, record.get("thenull").get("NULL"));
+      assertEquals(bool, record.get("thebool").get("BOOL"));
     }
-
 }
